# MiltNURBS

./: .gitignore  CMakeLists.txt  README.md
demos/: CMakeLists.txt
demos/horner1/: CMakeLists.txt  index.html  main.cpp
include/miltnurbs/: bernstein.h  bezier.h  bmp.h  horner.h  vector.h
libs/graphics/: CMakeLists.txt
libs/graphics/include/graphics/app/: app.h  app_guard.h  app_loop.h  gl_config.h  input_state.h  lifecycle.h  window_config.h
libs/graphics/include/graphics/camera/: camera.h  camera_controller.h  camera_controller_state.h  camera_factory.h  camera_systems.h  clip_planes.h  orthographic_camera.h  perspective_camera.h
libs/graphics/include/graphics/components/: flash.h  mesh_gl.h  parent.h  shader.h  shake.h  tags.h  texture.h  transform.h  world_matrix.h
libs/graphics/include/graphics/engine/: app_data.h  engine.h  error.h  result.h
libs/graphics/include/graphics/factories/: mesh_factories.h  prefab_factories.h  shader_factories.h  texture_factories.h
libs/graphics/include/graphics/input/: input_state.h  input_systems.h  key_state.h  mouse_state.h  scroll_state.h
libs/graphics/include/graphics/mesh/: mesh_factory_backend.h  vertex_attribute.h  vertex_layout.h
libs/graphics/include/graphics/platform/: gl_includes.h  glfw_callbacks.h  platform.h  time.h  window.h  window_config.h  window_state.h
libs/graphics/include/graphics/rendering/: renderer.h
libs/graphics/include/graphics/scene/: scene.h
libs/graphics/include/graphics/systems/: animation.h  color.h  ecs_observers.h  gl_state.h  render.h  transform.h
libs/graphics/include/graphics/ui/: entity_list.h  imgui_layer.h  inspector.h  widgets.h
libs/graphics/src/app/: app_guard.cpp  app_loop.cpp  lifecycle.cpp
libs/graphics/src/camera/: camera_factory.cpp  camera_systems.cpp
libs/graphics/src/components/: transform.cpp
libs/graphics/src/engine/: engine.cpp
libs/graphics/src/factories/: mesh_factories.cpp  prefab_factories.cpp  shader_factories.cpp  texture_factories.cpp
libs/graphics/src/input/: input_state.cpp  input_systems.cpp  key_state.cpp
libs/graphics/src/mesh/: mesh_factory_backend.cpp
libs/graphics/src/platform/: glfw_callbacks.cpp  platform.cpp  time.cpp  window.cpp  window_state.cpp
libs/graphics/src/rendering/: renderer.cpp
libs/graphics/src/systems/: animation.cpp  camera.cpp  color.cpp  ecs_observers.cpp  render.cpp  transform.cpp
libs/graphics/src/ui/: entity_list.cpp  imgui_layer.cpp  inspector.cpp  widgets.cpp
tests/: CMakeLists.txt  test_horner.cpp  test_vector.cpp
tests/nurbs/: CMakeLists.txt  test_bernstein.cpp  test_bezier.cpp  test_bmp.cpp
