if(EMSCRIPTEN)
    message(STATUS "✓ Emscripten detected - building web visualizer demo")
    add_subdirectory(horner1)
else()
    message(STATUS "")
    message(STATUS "═══════════════════════════════════════════════════════════")
    message(STATUS "  Web Demos Skipped - Emscripten Not Detected")
    message(STATUS "═══════════════════════════════════════════════════════════")
    message(STATUS "")
    message(STATUS "  The web visualizer demo requires Emscripten to compile")
    message(STATUS "  C++ to WebAssembly for browser execution.")
    message(STATUS "")
    message(STATUS "  To build web demos:")
    message(STATUS "    1. Install Emscripten SDK:")
    message(STATUS "       https://emscripten.org/docs/getting_started/downloads.html")
    message(STATUS "")
    message(STATUS "    2. Configure with Emscripten:")
    message(STATUS "       emcmake cmake -B build-web")
    message(STATUS "")
    message(STATUS "    3. Build:")
    message(STATUS "       cmake --build build-web")
    message(STATUS "")
    message(STATUS "═══════════════════════════════════════════════════════════")
    message(STATUS "")
endif()
